IE overflow hidden fix

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,10 @@ height: 0px;
   pointer-events: none;
 }
 */
+#map-svg{
+  position: relative;
+  overflow: hidden;
+}
 .header.label{
   font: 15px Lato;
   color: #333;
